--- a/langs/th-TH/common.json
+++ b/langs/th-TH/common.json
@@ -1,5 +1,5 @@
 {
-  "USER_NO_PERM": "You need permission ``%permission%`` to use %action%!",
-  "BOT_NO_PERM": "Im not have permission ``%permission%`` to use %action%!",
-  "API_FILED": "API Failed: %error%"
+  "USER_NO_PERM": "คุณต้องมีสิทธ์ ``%permission%`` ที่จะใช้ %action%!",
+  "BOT_NO_PERM": "บอทไม่มีสิทธ์ ``%permission%`` ที่จะใช้ %action%!",
+  "API_FILED": "API ผิดพลาด : %error%"
 }
