--- a/langs/th-TH/custom_activity.json
+++ b/langs/th-TH/custom_activity.json
@@ -3,17 +3,17 @@
     "BETRAYAL": "Betrayal.io",
     "YOUTUBE": "YouTube Together",
     "FISHINGTON": "Fishington.io",
-    "TITLE": "📝・ Create new activity link",
-    "FAILED": "❌ Link create failed!",
-    "ERROR": "Error",
-    "INVALID_CHANNEL": "❌ | Invalid channel specified!",
-    "BOT_NOPERM": "Need `CREATE_INSTANT_INVITE` permission",
-    "ACTIVITY_NOT_FOUND": "Activity not found!\nCorrect formats:\n",
-    "LINK_FAILED": "Invite link failed",
+    "TITLE": "📝・ สร้างลิงค์ activity ใหม่",
+    "FAILED": "❌ สร้างลิงค์ผิดพลาด!",
+    "ERROR": "ผิดพลาด",
+    "INVALID_CHANNEL": "❌ | กรุณาระบุห้อง!",
+    "BOT_NOPERM": "ต้องการสิทธ์ `CREATE_INSTANT_INVITE`",
+    "ACTIVITY_NOT_FOUND": "ไม่พบ Activity!\nแบบที่ถูกต้อง:\n",
+    "LINK_FAILED": "ลิงค์เชิญชวนผิดพลาด",
     "ACTIVITY_TITLE": "Activity: ``%name%``",
-    "ACTIVITY_CREATED": "✅ Link created!",
+    "ACTIVITY_CREATED": "✅ สร้างลิงค์แล้ว!",
     "ACTIVITY_CREATED_TITLE": "VoiceChat: ``%guild_name%/%channel_name%``\nActivity: ``%activity_name%``",
-    "ACTIVITY_CREATED_DESP": "[Click here to join %channel_name% with custom activity **%activity_name%**](https://discord.gg/%invite_code%)\n**This link will expires in 24 hrs**",
-    "NOT_IN_VC": "You're not in a voice channel!",
-    "API_FAILED": "Request API Failed!"
+    "ACTIVITY_CREATED_DESP": "[คลิกที่นี่เข้าห้อง %channel_name% เพื่อใช้งาน activity **%activity_name%**](https://discord.gg/%invite_code%)\n**ลิงค์นี้จะหมดอายุภายใน 24 ชม.**",
+    "NOT_IN_VC": "คุณไม่ได้อยู่ในห้องสนทนา!",
+    "API_FAILED": "รีเควส API ล้มเหลว!"
 }
