--- a/langs/th-TH/custom_activity.json
+++ b/langs/th-TH/custom_activity.json
@@ -14,6 +14,6 @@
     "ACTIVITY_CREATED": "✅ สร้างลิงค์แล้ว!",
     "ACTIVITY_CREATED_TITLE": "VoiceChat: ``%guild_name%/%channel_name%``\nActivity: ``%activity_name%``",
     "ACTIVITY_CREATED_DESP": "[คลิกที่นี่เข้าห้อง %channel_name% เพื่อใช้งาน activity **%activity_name%**](https://discord.gg/%invite_code%)\n**ลิงค์นี้จะหมดอายุภายใน 24 ชม.**",
-    "NOT_IN_VC": "คุณไม่ได้อยู่ในห้องสนทนา!",
+    "NOT_IN_VC": "คุณไม่ได้อยู่ในห้องพูดคุย!",
     "API_FAILED": "รีเควส API ล้มเหลว!"
 }
