--- a/langs/th-TH/music.json
+++ b/langs/th-TH/music.json
@@ -1,39 +1,39 @@
 {
-    "NOT_IN_VC": "You're not in a voice channel!",
-    "NOT_IN_SAME_VC": "You are not in the same voice channel!",
-    "NOT_PLAYING": "No music currently playing!",
-    "NO_PREVIOUS": "No music previous available!",
-    "PREVIOUS": "Backing to previous song!",
-    "ONLY_ONE_SONG_IN_QUEUE": "There is only one song in the queue!",
-    "CLEAR_QUEUE": "The queue has just been **removed**!",
+    "NOT_IN_VC": "คุณไม่ได้อยู่ในห้องพูดคุย!",
+    "NOT_IN_SAME_VC": "คุณไม่ได้อยู่ในห้องพูดคุนเดียวกัน!",
+    "NOT_PLAYING": "ไม่มีเพลงเล่นอยู่ขณะนี้!",
+    "NO_PREVIOUS": "ไม่มีเพลงก่อนหน้า!",
+    "PREVIOUS": "ไปยังเพลงก่อนหน้า!",
+    "ONLY_ONE_SONG_IN_QUEUE": "ขณะนี้มีเพลงเดียวในคิว!",
+    "CLEAR_QUEUE": "คิวถูก**ลบ**แล้ว!",
     "FILTER_USAGE": "Please specify a valid filter to enable or disable!",
     "FILTER_NOT_FOUND": "This filter doesn't exist, try for example (8D, vibrato, pulsator...)!",
     "FILTER_ENABLED": "🎵 - I'm **adding** the filter to the music, please wait... Note : the longer the music is, the longer this will take.",
     "FILTER_DISABLED": "🎵 - I'm **disabling** the filter on the music, please wait... Note : the longer the music is playing, the longer this will take.",
     "FILTERS": "Filters",
     "FILTERS_DISCRIPTION": "List of all filters enabled or disabled.\nUse `%prefix%filter` to add a filter to a song.",
-    "REPEAT_ENABLED": "🎵 - Repeat mode **enabled** the whole queue will be repeated endlessly!",
-    "REPEAT_DISABLED": "🎵 - Repeat mode **disabled**!",
+    "REPEAT_ENABLED": "🎵 - โหมดวนซ้ำ **ถูกเปิด** ทั้งคิวจะถูกวนซ้ำแบบไม่มีที่สิ้นสุด!",
+    "REPEAT_DISABLED": "🎵 - โหมดวนซ้ำ **ถูกปิด**!",
     "LYRICS_NO_TITLE": "No music currently playing, please indicate song name and artist",
-    "LYRICS": "Lyrics: %artist% - %song%",
-    "LYRICS_NOT_FOUND": "No Lyrics found: %song%",
-    "LYRICS_MORE": "\nMore: %url%",
-    "CHANNEL": "Channel",
+    "LYRICS": "เนื้อเพลง: %artist% - %song%",
+    "LYRICS_NOT_FOUND": "ไม่พบเนื้อเพลง: %song%",
+    "LYRICS_MORE": "\nเพิ่มเติม: %url%",
+    "CHANNEL": "ห้อง",
     "REQ_BY": "Requested by",
-    "FROM_PLAYLIST": "From playlist",
+    "FROM_PLAYLIST": "จากเพลลิสต์",
     "VIEWS": "Views",
-    "DURATION": "Duration",
+    "DURATION": "ระยะเวลา",
     "FILTERS_ACTIVATED": "Filters activated",
-    "VOLUME": "Volume",
-    "REPEAT_MODE": "Repeat mode",
-    "CURRENTLY_PAUSED": "Currently paused",
+    "VOLUME": "ระดับเสียง",
+    "REPEAT_MODE": "โหมดวนซ้ำ",
+    "CURRENTLY_PAUSED": "ขณะนี้กำลังหยุดอยู่",
     "PROGRESS_BAR": "Progress bar",
-    "YES": "Yes",
-    "NO": "No",
+    "YES": "ใช่",
+    "NO": "ไม่",
     "ALREADY_PAUSED": "The music is already paused!",
     "ALREADY_PLAYING": "The music is already playing!",
-    "PAUSED": "Song `%song%` paused!",
-    "RESUMED": "Song %song% resumed!",
+    "PAUSED": "เล่นเพลง `%song%`",
+    "RESUMED": "หยุดเล่นเพลง %song% ",
     "TITLE_EMPTY": "Please indicate the title of a song!",
     "NOPERM_CONNECT": "Im not have permission ``CONNECT`` to join that voice chat!",
     "NOPERM_SPEAK": "Im not have permission ``SPEAK`` to play music that voice chat!",
@@ -43,28 +43,28 @@
     "QUEUE_PATTEN": "**%queue_number%** [%song%](%song_url%) by %artist% \n-->Requested by: `%request_name%`", 
     "QUEUE_MORE_FOOTER": "And **%count%** other songs...",
     "QUEUE_FOOTER": "In the playlist **%count%** song(s)...",
-    "TIME_EMPTRY": "Please indicate the time!",
+    "TIME_EMPTRY": "กรุณาระบุเวลา!",
     "INVALID_TIME": "Invalid time: %time% please input ms!",
-    "SEEK": "Seeking to %time%!",
+    "SEEK": "เลื่อนเวลาไปที่ %time%!",
     "SHUFFLE": "Queue shuffled **%count%** song(s)!",
-    "SKIP": "The current music has just been **skipped**!",
+    "SKIP": "เพลงที่เล่นอยู่ **ถูกข้าม**!",
     "STOP": "Music **stopped** into this server !",
-    "VOLUME_SET": "Volume set to **%volume%%**!",
+    "VOLUME_SET": "ปรับเสียงเป็น **%volume%%**!",
     "DISCONNECT": "Music stopped as i have been disconnected from the channel!",
     "CHANNEL_EMPTY": "Music stopped as there is no more member in the voice channel!",
     "ERROR_NOT_PLAYING": "There is no music being played on this server!",
     "ERROR_NOT_CONNECTED": "You are not connected in any voice channel!",
     "ERROR_UNABLE_TO_JOIN": "I am not able to join your voice channel, please check my permissions!",
     "ERROR_VIDEO_UNAVAILABLE": "%song% is not available in your country! Skipping...",
-    "ERROR_MUSIC_STARTING": "The music is starting... please wait and retry!",
-    "ERROR": "Something went wrong ... Error : %error%, if music is not start disconnect me and use play command again!",
-    "NO_RESULT_FOUND": "No results found on YouTube for %query%!",
-    "PLAYLIST_ADD": "`%song%` has been added to the queue (**%count%** songs)!",
+    "ERROR_MUSIC_STARTING": "The music is starting... กรุณารอและลองอีกครั้ง!",
+    "ERROR": "มีบางอย่างผิดพลาด ... ผิดพลาด : %error%, ถ้าเพลงไม่เริ่มเล่น ให้นำฉันออกจากห้อง แล้วใช้คำสั่งเล่นอีกครั้ง!",
+    "NO_RESULT_FOUND": "ไม่พบการค้นหาบน YouTube สำหรับ %query%!",
+    "PLAYLIST_ADD": "`%song%` ถูกเพิ่มในคิว (**%count%** เพลง)!",
     "QUEUE_END": "Music stopped as there is no more music in the queue!",
     "SEARCH_CANCEL": "You did not provide a valid response ... Please send the command again!",
     "SELECTION_CALCEL": "The selection has been **cancelled**!",
-    "NOT_VALID_NUMBER": "You must send a valid number between **1** and **%count%**!",
-    "SEARCH_TITLE": "Here are your search results for `%query%`",
-    "TRACK_ADDED": "[%song%](%song_url%) has been added to the queue!",
-    "TRACK_START": "Now playing [%song%](%song_url%) into %vc_name%..."
+    "NOT_VALID_NUMBER": "กรุณาระบหมายเลข **1** และ **%count%**!",
+    "SEARCH_TITLE": "นี่คือผลการค้นหาสำหรับ `%query%`",
+    "TRACK_ADDED": "[%song%](%song_url%) ถูกเพิ่มในคิว!",
+    "TRACK_START": "กำลังเล่น [%song%](%song_url%) ในห้อง %vc_name%..."
 }
