--- a/langs/th-TH/music.json
+++ b/langs/th-TH/music.json
@@ -56,8 +56,8 @@
     "ERROR_NOT_CONNECTED": "You are not connected in any voice channel!",
     "ERROR_UNABLE_TO_JOIN": "I am not able to join your voice channel, please check my permissions!",
     "ERROR_VIDEO_UNAVAILABLE": "%song% is not available in your country! Skipping...",
-    "ERROR_MUSIC_STARTING": "The music is starting... กรุณารอและลองอีกครั้ง!",
-    "ERROR": "มีบางอย่างผิดพลาด ... ผิดพลาด : %error%, ถ้าเพลงไม่เริ่มเล่น ให้นำฉันออกจากห้อง แล้วใช้คำสั่งเล่นอีกครั้ง!",
+    "ERROR_MUSIC_STARTING": "กำลังเริ่มเล่นเพลง... กรุณารอและลองอีกครั้ง!",
+    "ERROR": "มีบางอย่างผิดพลาด... ผิดพลาด : %error%, ถ้าเพลงไม่เริ่มเล่น ให้นำฉันออกจากห้อง แล้วใช้คำสั่งเล่นอีกครั้ง!",
     "NO_RESULT_FOUND": "ไม่พบการค้นหาบน YouTube สำหรับ %query%!",
     "PLAYLIST_ADD": "`%song%` ถูกเพิ่มในคิว (**%count%** เพลง)!",
     "QUEUE_END": "Music stopped as there is no more music in the queue!",
