--- a/langs/en-US/admin.json
+++ b/langs/en-US/admin.json
@@ -21,7 +21,7 @@
         "LIMIT": "⚠️ | You can only delete messages form start to 100 messages, please enter value",
         "EXPIRE": "⚠️ | I can't delete message more than `14` days"
     },
-    "PREIFX":{
+    "PREFIX":{
         "USER_NOPERM": "❌ | You can't do this!",
         "TOO_LONG": "❌ | Prefix too long: `%prefix%`",
         "SUCCESS": "✅ | New prefix set to `%prefix%`",
