--- a/langs/en-US/common.json
+++ b/langs/en-US/common.json
@@ -1,5 +1,5 @@
 {
   "USER_NO_PERM": "You need permission ``%permission%`` to use %action%!",
-  "BOT_NO_PERM": "Im not have permission ``%permission%`` to use %action%!",
+  "BOT_NO_PERM": "I don't have permission ``%permission%`` to use %action%!",
   "API_FILED": "API Failed: %error%"
 }
