--- a/langs/en-US/admin.json
+++ b/langs/en-US/admin.json
@@ -8,15 +8,15 @@
         "NO_REASON": "No reason"
     },
     "KICK": {
-        "BOT_NOPERM": "❌ | Im not have permission `ADMINISTRATOR` to kick",
+        "BOT_NOPERM": "❌ | I don't have permission `ADMINISTRATOR` to kick",
         "USER_NOPERM": "❌ | You not have permission `ADMINISTRATOR` to kick",
         "NO_TARGET": "❌ | Please tag target",
         "SUCCESS": "❌ | 👌 | %user% is kick for reason: %reason%",
-        "ERROR": "🙏 | could not kick because: `%error%`",
+        "ERROR": "🙏 | Could not kick because: `%error%`",
         "NO_REASON": "No reason"
     },
     "CLEAR_MSG": {
-        "BOT_NOPERM": "❌ | Im not have permission `ADMINISTRATOR` to clear a messages",
+        "BOT_NOPERM": "❌ | I don't have permission `ADMINISTRATOR` to clear a messages",
         "USER_NOPERM": "❌ | You do not have permission contact an administrator",
         "LIMIT": "⚠️ | You can only delete messages form start to 100 messages, please enter value",
         "EXPIRE": "⚠️ | I can't delete message more than `14` days"
