--- a/langs/th-TH/general.json
+++ b/langs/th-TH/general.json
@@ -70,7 +70,7 @@
                 },
                 {
                     "TITLE": "💭 ข้อมูลเพิ่มเติม:",
-                    "VALUE": "-> [เชิญบอทนี้](%invite_url%)\n-> [เว็บหลัก](https://karen.starchaser.me)\n-> ติดต่อดพื่อแจ้งปัญหา: [Karen Camp△](https://discord.starchaser.me)\n-> ``Uptime:`` %uptime%\n->Argument: ``(optional)`` ``<required>``\n\n*[Ad] ขอขอบคุณ [Gcies](https://gcies.net) ที่สนับสนุน <3\nคลิกที่นี่ [here](https://gcies.net) เพื่อดูเพิ่มเติมเกี่ยวกับ [Gcies](https://gcies.net)*"
+                    "VALUE": "-> [เชิญบอทนี้](%invite_url%)\n-> [เว็บหลัก](https://karen.starchaser.me)\n-> ติดต่อเพื่อแจ้งปัญหา: [Karen Camp△](https://discord.starchaser.me)\n-> ``Uptime:`` %uptime%\n->Argument: ``(optional)`` ``<required>``\n\n*[Ad] ขอขอบคุณ [Gcies](https://gcies.net) ที่สนับสนุน <3\nคลิกที่นี่ [here](https://gcies.net) เพื่อดูเพิ่มเติมเกี่ยวกับ [Gcies](https://gcies.net)*"
                 }
             ]
         },
