--- a/langs/th-TH/music.json
+++ b/langs/th-TH/music.json
@@ -62,7 +62,7 @@
     "PLAYLIST_ADD": "`%song%` ถูกเพิ่มในคิว (**%count%** เพลง)!",
     "QUEUE_END": "เพลงหยุดเล่นเพราะไม่มีเพลงในคิวแล้ว!",
     "SEARCH_CANCEL": "คำที่ค้นหาไม่ถูกต้อง... โปรดพิมพ์คำสั่งใหม่อีกครั้ง!",
-    "SELECTION_CALCEL": "สิ่งที่ถูกเลือกถูกยกเลิก **ยกเลิก**!",
+    "SELECTION_CANCEL": "สิ่งที่ถูกเลือกถูกยกเลิก **ยกเลิก**!",
     "NOT_VALID_NUMBER": "กรุณาระบหมายเลข **1** ถึง **%count%**!",
     "SEARCH_TITLE": "นี่คือผลการค้นหาสำหรับ `%query%`",
     "TRACK_ADDED": "[%song%](%song_url%) ถูกเพิ่มในคิว!",
