--- a/langs/th-TH/admin.json
+++ b/langs/th-TH/admin.json
@@ -1,10 +1,13 @@
 {
-    "ban":{
+    "BAN": {
         "BOT_NOPERM": "❌ | บอทไม่มีสิทธ์ในการใช้สิ่งนี้ โปรดติตต่อแอดมิน",
         "USER_NOPERM": "❌ | คุณไม่มีสิทธ์ `ADMINISTRATOR` เพื่อที่จะแบน",
         "NO_TARGET": "❌ | โปรดเลือกเป้าหมาย",
         "SUCCESS": "❌ | 👌 | %user% ถูกแบนเนื่องจาก: %reason%",
         "ERROR": "🙏 | ไม่สามารถแบนได้เพราะ: `%error%`",
         "NO_REASON": "ไม่มีเหตุผล"
+    },
+    "LANG_CHANGE": {
+        "SUCCESS": "✅ | ภาษาถูกเปลี่ยนเป็น `%lang%` เรียบร้อยแล้ว"
     }
 }
